# buzz

./: Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: check.yml  ci.yml  scheduled.yml  test.yml
src/: main.rs  tray_icon.rs
