[package]
name = "buzz"
version = "1.6.0"
edition = "2021"

description = "A simple system tray application for notifying about unseen e-mail"
readme = "README.md"

authors = ["Jon Gjengset <jon@thesquareplanet.com>"]

homepage = "https://github.com/jonhoo/buzz"
repository = "https://github.com/jonhoo/buzz.git"

keywords = ["email","cli","systray","notification"]
categories = ["command-line-utilities", "email"]

license = "MIT/Apache-2.0"

[badges]
maintenance = { status = "passively-maintained" }

[profile.release]
debug=true

[features]
default = ["systray"]

[dependencies]
anyhow = "1"
imap = { version = "=3.0.0-alpha.6", features = ["rustls-tls"] }
systray = { version = "0.4", optional = true }
mailparse = "0.13"
toml = "0.5"
notify-rust = "4.0.0-beta.2"
rayon = "1.0.0"
rustls = "0.20"
askama_escape = "0.10"
chrono = "0.4"
directories-next = "2"
