[package]
name = "buzz"
version = "1.7.0-rc.3"
edition = "2021"
authors = ["Jon Gjengset <jon@thesquareplanet.com>"]
description = "A simple system tray application for notifying about unseen e-mail"
rust-version = "1.67.1"

homepage = "https://github.com/jonhoo/buzz"
repository = "https://github.com/jonhoo/buzz.git"

keywords = ["email","cli","systray","notification"]
categories = ["command-line-utilities", "email"]

license = "MIT OR Apache-2.0"

[profile.release]
debug=true

[features]
default = ["systray"]
systray = ["tray-item"]

[dependencies]
anyhow = "1"
imap = { version = "=3.0.0-alpha.12", features = ["rustls-tls"] }
mailparse = "0.14"
toml = "0.8"
notify-rust = "4.0.0-beta.2"
rayon = "1.0.0"
askama_escape = "0.10"
chrono = "0.4"
directories-next = "2"
tray-item = { version = "0.9.0", features=["ksni"], optional = true}
serde = { version = "1.0.196", features = ["derive"] }
